@@ -702,7 +702,7 @@ function fnc_usg_prn { # NB: dash supports fnc_nm (){} syntax, not function fnc_
     printf "          ${fnt_bld}ls mdl*2005*nc | $spt_nm -d ${dst_xmp} -O ${drc_out_xmp} ${fnt_nrm}\n"
     printf "\nComplete documentation at http://nco.sf.net/nco.html#${spt_nm}\n\n"
     exit 1
-} # end fnc_usg_prn()
+} # !fnc_usg_prn()
 
 # RRG processing needs NCO filters documented in http://nco.sf.net/nco.html#filter
 function ncvarlst { ncks --trd -m ${1} | grep -E ': type' | cut -f 1 -d ' ' | sed 's/://' | sort ; }
@@ -717,7 +717,7 @@ function dst_is_grd {
     fl=${1}
     flg='Yes'
     #flg='No'
-} # end dst_is_grd()
+} # !dst_is_grd()
 
 # Check argument number and complain accordingly
 arg_nbr=$#
